added some new files

--- a/local proof of concept/front/main.html
+++ b/local proof of concept/front/main.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Document</title>
 </head>
     <h1>IMAGE-AUGMENTATION</h1>
 <body>
     <form method="POST" action="/upload" enctype="multipart/form-data">
-        <input type="file" name="image">
+        <input type="file" id="image_input" name="image">
         <input type="submit">
     </form>
 
+    <div id= "display_image"></div>
+    <img src="/images/input/test.png" width="300" alt="">
+
+    <script src="/javaScripts/script.js"></script>
 </body>
 </html>
