--- a/local proof of concept/front/main.html
+++ b/local proof of concept/front/main.html
@@ -16,8 +16,8 @@
             Image Augmentation
         </h1>
         <div class="Header">
-            <a href="#home" ,style=>Home</a>
-            <a href="#team">Our Team</a>
+            <a href="#Foto" ,style=>foto filter</a>
+            <a href="#Video">video filter</a>
         </div>
     </header>
     <form method="POST" action="/upload" enctype="multipart/form-data">
