snapshot function now sends information about the filter selected to the configData

--- a/local proof of concept/front/main.html
+++ b/local proof of concept/front/main.html
@@ -31,8 +31,9 @@
         </p>
         <input type="submit" name = "submit" value="image">
         <input type="submit" name = "submit" value="video">
-        <input type="submit" name = "submit" value="snapshot" onclick="snapshot()">
     </form>
+
+    <button onclick="snapshot('snapshot')"> snapshot</button>
     
     <!-- new button stop and start the video recording -->
     
