changed file names and added 25pfs to input

--- a/local proof of concept/front/main.html
+++ b/local proof of concept/front/main.html
@@ -42,7 +42,7 @@
 
     
     <div id= "display_image"></div>
-    <img src="/images/input/test.png" width="300" alt="">
+    <img src="/images/input/image.png" width="300" alt="">
 
     <script src="/javaScripts/script.js"></script>
 
