--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -11,13 +11,14 @@
 
 <body>
     <header>
-        <h1 style="color: #719fdc;">
+        <h1>
             Image Augmentation
         </h1>
 
     </header>
     <form method="POST" action="/upload" enctype="multipart/form-data">
         <div class="boxen">
+            <input type="file" id="image_input" name="image">
             <div class="dropdown">
                 <p class="dropbtn">∇ Choose filter</p>
                 <div class="dropdown-content">
@@ -29,14 +30,15 @@
                     <label for="filter1">filter 3</label><br>
                 </div>
             </div>
-            <input type="file" id="image_input" name="image">
+            
             <input type="submit" name = "submit" value="image">
         </div>
         <div class="boxen">
+            <input type="file" id="image_input" name="image">
             <div class="dropdown">
                 <p class="dropbtn">∇ Choose filter</p>
                 <div class="dropdown-content">
-                    <input type="radio" id="filter1" name="filter" value="filter1" checked>
+                    <input type="radio" id="filter1" name="filter" value="filter1">
                     <label for="filter1">filter 1</label><br>
                     <input type="radio" id="filter2" name="filter" value="filter2">
                     <label for="filter1">filter 2</label><br>
@@ -44,7 +46,7 @@
                     <label for="filter1">filter 3</label><br>
                 </div>
             </div>
-            <input type="file" id="image_input" name="image">
+            
             <input type="submit" name = "submit" value="video">
         </div>
         <div>
