--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -23,31 +23,31 @@
             <div class="dropdown">
                 <p class="dropbtn">∇ Choose filter</p>
                 <div class="dropdown-content">
-                    <input type="radio" id="1" name="filter" value="filter1" checked>
+                    <input type="radio" id="1" name="filter" value="1" checked>
                     <label for="filter1">filter 1</label><br>
-                    <input type="radio" id="2" name="filter" value="filter2">
+                    <input type="radio" id="2" name="filter" value="2">
                     <label for="filter2">filter 2</label><br>
-                    <input type="radio" id="3" name="filter" value="filter3">
+                    <input type="radio" id="3" name="filter" value="3">
                     <label for="filter3">filter 3</label><br>
-                    <input type="radio" id="4" name="filter" value="filter4">
+                    <input type="radio" id="4" name="filter" value="4">
                     <label for="filter4">filter 4</label><br>
-                    <input type="radio" id="5" name="filter" value="filter5">
+                    <input type="radio" id="5" name="filter" value="5">
                     <label for="filter5">filter 5</label><br>
-                    <input type="radio" id="6" name="filter" value="filter6">
+                    <input type="radio" id="6" name="filter" value="6">
                     <label for="filter6">filter 6</label><br>
-                    <input type="radio" id="7" name="filter" value="filter7">
+                    <input type="radio" id="7" name="filter" value="7">
                     <label for="filter7">filter 7</label><br>
-                    <input type="radio" id="8" name="filter" value="filter8">
+                    <input type="radio" id="8" name="filter" value="8">
                     <label for="filter8">filter 8</label><br>
-                    <input type="radio" id="9" name="filter" value="filter9">
+                    <input type="radio" id="9" name="filter" value="9">
                     <label for="filter9">filter 9</label><br>
-                    <input type="radio" id="10" name="filter" value="filter10">
+                    <input type="radio" id="10" name="filter" value="10">
                     <label for="filter10">filter 10</label><br>
-                    <input type="radio" id="11" name="filter" value="filter11">
+                    <input type="radio" id="11" name="filter" value="11">
                     <label for="filter11">filter 11</label><br>
-                    <input type="radio" id="12" name="filter" value="filter12">
+                    <input type="radio" id="12" name="filter" value="12">
                     <label for="filter12">filter 12</label><br>
-                    <input type="radio" id="13" name="filter" value="filter13">
+                    <input type="radio" id="13" name="filter" value="13">
                     <label for="filter13">filter 13</label><br>
                 </div>
             </div>
@@ -59,31 +59,31 @@
             <div class="dropdown">
                 <p class="dropbtn">∇ Choose filter</p>
                 <div class="dropdown-content">
-                    <input type="radio" id="1" name="filter" value="filter1">
+                    <input type="radio" id="1" name="filter" value="1">
                     <label for="filter1">filter 1</label><br>
-                    <input type="radio" id="2" name="filter" value="filter2">
+                    <input type="radio" id="2" name="filter" value="2">
                     <label for="filter2">filter 2</label><br>
-                    <input type="radio" id="3" name="filter" value="filter3">
+                    <input type="radio" id="3" name="filter" value="3">
                     <label for="filter3">filter 3</label><br>
-                    <input type="radio" id="4" name="filter" value="filter4">
+                    <input type="radio" id="4" name="filter" value="4">
                     <label for="filter4">filter 4</label><br>
-                    <input type="radio" id="5" name="filter" value="filter5">
+                    <input type="radio" id="5" name="filter" value="5">
                     <label for="filter5">filter 5</label><br>
-                    <input type="radio" id="6" name="filter" value="filter6">
+                    <input type="radio" id="6" name="filter" value="6">
                     <label for="filter6">filter 6</label><br>
-                    <input type="radio" id="7" name="filter" value="filter7">
+                    <input type="radio" id="7" name="filter" value="7">
                     <label for="filter7">filter 7</label><br>
-                    <input type="radio" id="8" name="filter" value="filter8">
+                    <input type="radio" id="8" name="filter" value="8">
                     <label for="filter8">filter 8</label><br>
-                    <input type="radio" id="9" name="filter" value="filter9">
+                    <input type="radio" id="9" name="filter" value="9">
                     <label for="filter9">filter 9</label><br>
-                    <input type="radio" id="10" name="filter" value="filter10">
+                    <input type="radio" id="10" name="filter" value="10">
                     <label for="filter10">filter 10</label><br>
-                    <input type="radio" id="11" name="filter" value="filter11">
+                    <input type="radio" id="11" name="filter" value="11">
                     <label for="filter11">filter 11</label><br>
-                    <input type="radio" id="12" name="filter" value="filter12">
+                    <input type="radio" id="12" name="filter" value="12">
                     <label for="filter12">filter 12</label><br>
-                    <input type="radio" id="13" name="filter" value="filter13">
+                    <input type="radio" id="13" name="filter" value="13">
                     <label for="filter13">filter 13</label><br>
                 </div>
             </div>
