little errors in the configdata solved

--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -14,7 +14,6 @@
         <h1 style="color: #454857;">
             Image Augmentation
         </h1>
-        <a href="/FotoFilter">Foto filter</a>
     </header>
     <form method="POST" action="/upload" enctype="multipart/form-data">
 
@@ -52,6 +51,12 @@
                     <label for="filter12">filter_reflect</label><br>
                     <input type="radio" id="13" name="filter" value="13">
                     <label for="filter13">filter_wBorder</label><br>
+                    <label><strong>Style transfer</strong></label><br>
+                    <input type="radio" id="14" name="filter" value="14">
+                    <label for="filter14">ST filter</label><br>
+                    <label><strong>Face recognition</strong></label><br>
+                    <input type="radio" id="15" name="filter" value="15">
+                    <label for="filter15">FR filter</label><br>
                 </div>
             </div>
 
