new Filters for the dropdown menü and problem with the configData fixxed

--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -51,12 +51,21 @@
                     <label for="filter12">filter_reflect</label><br>
                     <input type="radio" id="13" name="filter" value="13">
                     <label for="filter13">filter_wBorder</label><br>
+
                     <label><strong>Style transfer</strong></label><br>
                     <input type="radio" id="14" name="filter" value="14">
-                    <label for="filter14">ST filter</label><br>
-                    <label><strong>Face recognition</strong></label><br>
+                    <label for="filter14">filter_candy</label><br>
                     <input type="radio" id="15" name="filter" value="15">
-                    <label for="filter15">FR filter</label><br>
+                    <label for="filter15">filter_starry_night</label><br>
+                    <input type="radio" id="16" name="filter" value="16">
+                    <label for="filter16">filter_monet</label><br>
+
+                    <label><strong>Face recognition</strong></label><br>
+                    <input type="radio" id="17" name="filter" value="17">
+                    <label for="filter17">filter_clown</label><br>
+                    <input type="radio" id="18" name="filter" value="18">
+                    <label for="filter18">filter_dog</label><br>
+                    
                 </div>
             </div>
 
@@ -95,12 +104,25 @@
                     <label for="filter12">filter_reflect</label><br>
                     <input type="radio" id="13" name="filter" value="13">
                     <label for="filter13">filter_wBorder</label><br>
+
                     <label><strong>Style transfer</strong></label><br>
                     <input type="radio" id="14" name="filter" value="14">
-                    <label for="filter14">ST filter</label><br>
-                    <label><strong>Face recognition</strong></label><br>
+                    <label for="filter14">filter_candy</label><br>
                     <input type="radio" id="15" name="filter" value="15">
-                    <label for="filter15">FR filter</label><br>
+                    <label for="filter15">filter_starry_night</label><br>
+                    <input type="radio" id="16" name="filter" value="16">
+                    <label for="filter16">filter_monet</label><br>
+
+                    <label><strong>Face recognition</strong></label><br>
+                    <input type="radio" id="17" name="filter" value="17">
+                    <label for="filter17">filter_clown</label><br>
+                    <input type="radio" id="18" name="filter" value="18">
+                    <label for="filter18">filter_dog</label><br>
+                    <input type="radio" id="19" name="filter" value="19">
+                    <label for="filter19">filter_video_clown</label><br>
+                    <input type="radio" id="20" name="filter" value="20">
+                    <label for="filter20">filter_video_dog</label><br>
+
                 </div>
             </div>
             
