corrected filter names

--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -58,7 +58,7 @@
                     <input type="radio" id="15" name="filter" value="15">
                     <label for="filter15">filter_starry_night</label><br>
                     <input type="radio" id="16" name="filter" value="16">
-                    <label for="filter16">filter_monet</label><br>
+                    <label for="filter16">filter_pencil</label><br>
 
                     <label><strong>Face recognition</strong></label><br>
                     <input type="radio" id="17" name="filter" value="17">
@@ -111,7 +111,7 @@
                     <input type="radio" id="15" name="filter" value="15">
                     <label for="filter15">filter_starry_night</label><br>
                     <input type="radio" id="16" name="filter" value="16">
-                    <label for="filter16">filter_monet</label><br>
+                    <label for="filter16">filter_pencil</label><br>
 
                     <label><strong>Face recognition</strong></label><br>
                     <input type="radio" id="17" name="filter" value="17">
