added faceRec filters to website and possible to save faceRec video

--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -64,7 +64,11 @@
                     <input type="radio" id="17" name="filter" value="17">
                     <label for="filter17">filter_clown</label><br>
                     <input type="radio" id="18" name="filter" value="18">
-                    <label for="filter18">filter_dog</label><br>
+                    <label for="filter18">filter_pandaFull</label><br>
+                    <input type="radio" id="19" name="filter" value="19">
+                    <label for="filter19">filter_cat</label><br>
+                    <input type="radio" id="20" name="filter" value="20">
+                    <label for="filter20">filter_panda</label><br>
                     
                 </div>
             </div>
@@ -117,11 +121,11 @@
                     <input type="radio" id="17" name="filter" value="17">
                     <label for="filter17">filter_clown</label><br>
                     <input type="radio" id="18" name="filter" value="18">
-                    <label for="filter18">filter_dog</label><br>
+                    <label for="filter18">filter_pandaFull</label><br>
                     <input type="radio" id="19" name="filter" value="19">
-                    <label for="filter19">filter_video_clown</label><br>
+                    <label for="filter19">filter_cat</label><br>
                     <input type="radio" id="20" name="filter" value="20">
-                    <label for="filter20">filter_video_dog</label><br>
+                    <label for="filter20">filter_panda</label><br>
 
                 </div>
             </div>
