Video.avi download

--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -135,9 +135,9 @@
 
     </form>
     
-    <!-- button to download the output video, the Video has to have the Name video.mp4 -->
+    <!-- button to download the output video, the Video has to have the Name video.avi -->
 
-    <a class="download" href="/images/output/video.mp4" download="FilterVideo.mp4">Download the video</a>
+    <a class="download" href="/images/output/video.avi" download="FilterVideo.avi">Download the video</a>
 
     <!-- new button stop and start the video recording -->
 
