--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -145,7 +145,7 @@
 
 
     <div id= "display_image"></div>
-    <img src="/images/output/image.png" width="300" alt="">
+    <img src="/images/output/image.jpg" width="300" alt="">
 
     <script src="/javaScripts/script.js"></script>
 
