--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -203,7 +203,7 @@
     <div class="displays">
 
         <div id= "display_image" style="display: none;"></div>
-        <img src="/images/output/image.png" width="300" alt="">
+        <img src="/images/output/image.jpg" width="300" alt="">
 
         <script src="/javaScripts/script.js"></script>
 
