--- a/local_version/front/main.html
+++ b/local_version/front/main.html
@@ -191,7 +191,7 @@
 
                 </div>
             </div>
-            <label for="submitVideo" class="custom-upload-button">Upload image</label>
+            <label for="submitVideo" class="custom-upload-button">Upload video</label>
             <input type="submit" id="submitVideo" name = "submit" value="video">
 
             <!-- button to download the output video, the Video has to have the Name video.avi -->
